Fixed card spacing, added small stylistic elements

--- a/public/css/primary.css
+++ b/public/css/primary.css
@@ -4,6 +4,7 @@
 
 body {
     position: relative;
+    margin: 0 0;
 }
 
 .wrapper {
@@ -28,7 +29,7 @@ a:visited {
 }
 
 a.btn-person-font {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .main-home {
@@ -36,8 +37,7 @@ a.btn-person-font {
     justify-content: center;
     align-items: center;
     background-color: #182B49;
-    /*-webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 85%, 50% 100%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 85%, 50% 100%, 0 100%);*/
+    padding: 10px;
 }
 
 .main-header {
@@ -53,8 +53,8 @@ a.btn-person-font {
 
 .main-scroll {
     height: 61vh;
-    border: 1px solid black;
     overflow-y: scroll;
+    background-color: #B6B1A9;
 }
 
 .btn-person {
@@ -67,17 +67,27 @@ a.btn-person-font {
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
-    font-size: 20px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid rgba(172, 172, 172, 0.425);
 }
 
 img.btn-icon {
-    margin-left: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+svg.icon-user {
+    margin-left: 25px;
+    margin-right: 20px;
+}
+
+svg.icon-forward {
+    margin-left: auto;
+    margin-right: 25px;
 }
 
 .btn-mentor {
-    background-color: #C69214;
-    margin-top: 2px;
+    background-color: #FFCD00;
+    margin-top: 0;
     margin-bottom: 0;
 }
 
@@ -103,7 +113,7 @@ img.btn-icon {
     justify-content: space-around;
     align-items: center;
     height: 15vh;
-    border: 1px solid black;
+    box-shadow: 0 -1px 20px 0px gray;
 }
 
 .btn-tab {
@@ -114,7 +124,7 @@ img.btn-icon {
 }
 
 .tab a {
-    color: #C69214;
+    color: #FFCD00;
 }
 
 .btn-home {
@@ -130,7 +140,7 @@ button {
 }
 
 .logo {
-    color: #C69214;
+    color: #FFCD00;
     border: 1px solid black;
 }
 
@@ -155,21 +165,21 @@ button {
     align-items: center;
     padding: 5px;
     border-radius: 40px;
-    border: 2px solid #C69214;
+    border: 2px solid #FFCD00;
 }
 
 .profile-workout {
     align-items: center;
     padding: 10px;
     border-radius: 40px;
-    border: 2px solid #C69214;
+    border: 2px solid #FFCD00;
 }
 
 .profile-switch {
     align-items: center;
     padding: 5px;
     border-radius: 40px;
-    border: 2px solid #C69214;
+    border: 2px solid #FFCD00;
 }
 
 #profile-text {
